--- a/_posts/2020-5-16-pow-x-n.md
+++ b/_posts/2020-5-16-pow-x-n.md
@@ -1,3 +1,4 @@
+```python
 #
 # @lc app=leetcode id=50 lang=python
 #
@@ -42,6 +43,7 @@
 # -100.0 < x < 100.0
 # n is a 32-bit signed integer, within the range [−2^31, 2^31 − 1]
 # @lc code=start
+```
 
 很无聊的题目,可以用递归，也可以不用。我不喜欢递归，哈哈。核心思想就是，如果n是偶数，那么x变成x的平方，再算幂；如果n是基数，n-1，最后的结果要多乘一个x。 比如 x^5 = x*(x^4)= x*(x*x)^2
 
