--- a/_posts/2020-5-16-pow-x-n.md
+++ b/_posts/2020-5-16-pow-x-n.md
@@ -1,49 +1,49 @@
-```python
-#
-# @lc app=leetcode id=50 lang=python
-#
-# [50] Pow(x, n)
-#
-# https://leetcode.com/problems/powx-n/description/
-#
-# algorithms
-# Medium (28.60%)
-# Likes:    973
-# Dislikes: 2385
-# Total Accepted:    362.9K
-# Total Submissions: 1.3M
-# Testcase Example:  '2.00000\n10'
-#
-# Implement pow(x, n), which calculates x raised to the power n (x^n).
-# 
-# Example 1:
-# 
-# 
-# Input: 2.00000, 10
-# Output: 1024.00000
-# 
-# 
-# Example 2:
-# 
-# 
-# Input: 2.10000, 3
-# Output: 9.26100
-# 
-# 
-# Example 3:
-# 
-# 
-# Input: 2.00000, -2
-# Output: 0.25000
-# Explanation: 2^-2 = 1/2^2 = 1/4 = 0.25
-# 
-# 
-# Note:
 
-# -100.0 < x < 100.0
-# n is a 32-bit signed integer, within the range [−2^31, 2^31 − 1]
-# @lc code=start
-```
+
+@lc app=leetcode id=50 lang=python
+
+[50] Pow(x, n)
+
+https://leetcode.com/problems/powx-n/description/
+
+algorithms
+Medium (28.60%)
+Likes:    973
+Dislikes: 2385
+Total Accepted:    362.9K
+Total Submissions: 1.3M
+Testcase Example:  '2.00000\n10'
+
+Implement pow(x, n), which calculates x raised to the power n (x^n).
+
+Example 1:
+
+
+Input: 2.00000, 10
+Output: 1024.00000
+
+
+Example 2:
+
+
+Input: 2.10000, 3
+Output: 9.26100
+
+
+Example 3:
+
+
+Input: 2.00000, -2
+Output: 0.25000
+Explanation: 2^-2 = 1/2^2 = 1/4 = 0.25
+
+
+Note:
+
+-100.0 < x < 100.0
+n is a 32-bit signed integer, within the range [−2^31, 2^31 − 1]
+@lc code=start
+
 
 很无聊的题目,可以用递归，也可以不用。我不喜欢递归，哈哈。核心思想就是，如果n是偶数，那么x变成x的平方，再算幂；如果n是基数，n-1，最后的结果要多乘一个x。 比如 x^5 = x*(x^4)= x*(x*x)^2
 
