--- a/_posts/2020-05-16-lc-050-pow(x,n).md
+++ b/_posts/2020-05-16-lc-050-pow(x,n).md
@@ -5,7 +5,7 @@ subtitle:   "算法"
 date:       2020-05-16 12:00:00
 author:     "yang"
 header-img: "img/post-bg-2015.jpg"
-catalog: true
+catalog: false
 tags:
     - 力扣
 ---
