--- a/_posts/leetcode/2020-05-17-lc-001-two-sum.md
+++ b/_posts/leetcode/2020-05-17-lc-001-two-sum.md
@@ -5,7 +5,8 @@ subtitle:   "算法"
 date:       2020-05-16 12:00:00
 author:     "yang"
 header-img: "img/post-bg-2015.jpg"
-catalog: leetcode
+catalog: true
+category: leetcode
 tags:
     - 力扣
 ---
