--- a/_posts/leetcode/2020-05-17-lc-001-two-sum.md
+++ b/_posts/leetcode/2020-05-17-lc-001-two-sum.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "算法题之leetcode-001-two-sum"
+title:      "leetcode-001-two-sum"
 subtitle:   "算法"
 date:       2020-05-16 12:00:00
 author:     "yang"
@@ -8,19 +8,18 @@ header-img: "img/post-bg-2015.jpg"
 catalog: true
 category: leetcode
 tags:
+    - leetcode
     - 力扣
 ---
 
 
-
+```python
 [1] Two Sum
 
 https://leetcode.com/problems/two-sum/description/
 
 algorithms
 Easy (44.18%)
-Likes:    10819
-Dislikes: 363
 
 Given an array of integers, return indices of the two numbers such that they
 add up to a specific target.
@@ -38,7 +37,12 @@ return [0, 1].
 
 The idea is to use dictionary with key equal to (target-nums[i]) and value equal to the index i. Once the nums[j]
 is found in the dictionary, then the two-sum pair is found.
+```
 
+## Algorithm:
+1. use dictionary distructure
+    key: difference between the sum and the current value
+    value: the index of the current value
 
 ```python
 class Solution(object):
