--- a/_posts/blog/2020-08-27-二分法的变化随想.md
+++ b/_posts/blog/2020-08-27-二分法的变化随想.md
@@ -166,8 +166,8 @@ while left <= right:
         left = mid + 1
 ```
 while跳出后：
-1. 若存在target，则 left 指向第一个target （版本一）, right指向小于target 的最大的值 
-2. 若不存在target，则 left 指向比target大的最小的值 （版本二），right指向小于target的最大的值 
+1. 若存在target，则 left 指向第一个target （版本一）, right指向小于target 的最大的值 （版本六）
+2. 若不存在target，则 left 指向比target大的最小的值 （版本二），right指向小于target的最大的值（版本六）
 3. 无论存不存在target，right 都会指向小于 target 的最大的值
 
 ## 相等也向右 (left = mid + 1)
@@ -180,8 +180,8 @@ while left <= right:
         right = mid - 1
 ```
 while跳出后：
-1. 若存在target，则 right 指向最后一个target （版本四）,left 指向大于target的最小的值
-2. 若不存在target，则 right 指向比target小的最大的值 （版本五）,left 指向比target大的最小的值
+1. 若存在target，则 right 指向最后一个target （版本四）,left 指向大于target的最小的值 （版本三）
+2. 若不存在target，则 right 指向比target小的最大的值 （版本五）,left 指向比target大的最小的值 （版本三）
 3. 无论存不存在key，left 都会指向大于target的最小的值
 
 
