--- a/_posts/blog/2020-08-27-二分法的变化随想.md
+++ b/_posts/blog/2020-08-27-二分法的变化随想.md
@@ -182,7 +182,7 @@ while left <= right:
 while跳出后：
 1. 若存在target，则 right 指向最后一个target （版本四）,left 指向大于target的最小的值 （版本三）
 2. 若不存在target，则 right 指向比target小的最大的值 （版本五）,left 指向比target大的最小的值 （版本三）
-3. 无论存不存在key，left 都会指向大于target的最小的值
+3. 无论存不存在target，left 都会指向大于target的最小的值
 
 
 
