--- a/_posts/blog/2020-07-05-datetime.md
+++ b/_posts/blog/2020-07-05-datetime.md
@@ -10,47 +10,40 @@ category: blog
 tags:
     - 力扣
 ---
-
-
-# datetime
+#### datetime
 ```python
 import datetime as dt
 data['timestamp'] = pd.to_datetime(data['timestamp'])
 data['dayofyear'] = data['timestamp'].dt.dayofyear
 data['dayofweek'] = data['timestamp'].dt.dayofweek
 ```
-## total seconds
+#### total seconds
 ```python
 data['purchase_signup_delta'] = (data['purchase_time'] - data['signup_time']).dt.total_seconds()
 data.head()
 ```
-
-## parse_dates
+#### parse_dates
 ```python
 data = pd.read_csv('Fraud_Data.csv', parse_dates=['signup_time', 'purchase_time'])
 data.head()
 ```
-
-## days of delta, x.days
+#### days of delta, x.days
 ```python
 data_quit['duration'] = data['quit_date'] - data['join_date']
 data_quit['duration'] = data_quit['duration'].map(lambda x:x.days)
 ```
-
-## day of week, year
+#### day of week, year
 ```python
 import datetime as dt
 data['timestamp'] = pd.to_datetime(data['timestamp'])
 data['dayofyear'] = data['timestamp'].dt.dayofyear
 data['dayofweek'] = data['timestamp'].dt.dayofweek
 ```
-
-## date range
+#### date range
 ```python
 unique_date = pd.date_range(start="2011-01-24", end="2015-12-13", freq="D")
 ```
-
-### example
+#### example
 ```python
 loop_count = []
 loop_company = []
@@ -63,4 +56,12 @@ for oneDate in unique_date:
         loop_company.append(oneCompany)
         loop_date.append(oneDate)
 head_count = pd.DataFrame({'date':loop_date, 'company_id':loop_company, 'headcount':loop_count})
+```
+
+```python
+# extract month, weekday, and hour information
+data['month'] = data['date'].apply(lambda x: x.month)
+data['day'] = data['date'].apply(lambda x: x.day)
+data['weekday'] = data['date'].apply(lambda x: x.dayofweek)
+data['hour'] = data['date'].apply(lambda x: x.hour)
 ```
